# arm2d

./: CMakeLists.txt  README.md  arm2d.py  requirements.txt
include/arm2d/: polygon.h
src/: arm2d.cpp  polygon.cpp
